--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ Tools/services/__pycache__/__init__.cpython-312.pyc
 Tools/services/__pycache__/features.cpython-312.pyc
 Tools/services/__pycache__/aws_ec2.cpython-312.pyc
 Tools/services/__pycache__/abstract_services.cpython-312.pyc
+1.pem
+test.py
+Tools/services/__pycache__/aws_svc.cpython-312.pyc
+Tools/features/__pycache__/aws_services.cpython-312.pyc
+Tools/features/__pycache__/aws_services.cpython-312.pyc
+test.py
