--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Tools/services/__pycache__/aws_svc.cpython-312.pyc
 Tools/features/__pycache__/aws_services.cpython-312.pyc
 Tools/features/__pycache__/aws_services.cpython-312.pyc
 test.py
+Tools/features/__pycache__/__init__.cpython-312.pyc
+Tools/services/__pycache__/shopping.cpython-312.pyc
