--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 apikey.pem
-Tools/services/__pycache__/__init__.cpython-312.pyc
-Tools/services/__pycache__/features.cpython-312.pyc
-Tools/services/__pycache__/aws_ec2.cpython-312.pyc
-Tools/services/__pycache__/abstract_services.cpython-312.pyc
-1.pem
-test.py
-Tools/services/__pycache__/aws_svc.cpython-312.pyc
-Tools/features/__pycache__/aws_services.cpython-312.pyc
-Tools/features/__pycache__/aws_services.cpython-312.pyc
-test.py
-Tools/features/__pycache__/__init__.cpython-312.pyc
-Tools/services/__pycache__/shopping.cpython-312.pyc
-Tools/features/__pycache__/google_shopping.cpython-312.pyc
+build/
+dist/
+gptservice/Tools/services/__pycache__
+gptservice/Tools/features/__pycache__
+gptservice/Tools/__pycache__
+gptservice.egg-info/
+gptservice/__pycache__
